projects/vb6parse/snapshots/parsers/cst/control_flow/end/end_standalone_at_module_level.snap
---
source: projects/vb6parse/tests/control_flow/end.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EndStatement
      children:
        - kind: EndKeyword
          text: End
    - kind: Newline
      text: "\n"
